--- a/training/task2/index.html
+++ b/training/task2/index.html
@@ -71,6 +71,9 @@
         <br>
         <button type="button" class="submit">Submit Query</button>
     </form>
+	
+	<h1>DOING THIS FOR GIT</h1>
+	
     <script src="script.js"></script>
 </body>
 </html>
