--- a/training/task2/index.html
+++ b/training/task2/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My first web page and my name is Aman</h1>
+    <h1>Aman Sheikh</h1>
     <h2>What this is</h2>
     <p>Welcome to my first webpage. I created this webpage without the assistenace of a webpage creator. Just my text editor and a keen understanding <b>OF HTML</b>.</p>
     <h2>Why this is</h2>
